--- a/app/src/at-cuongle/res/values/colors.xml
+++ b/app/src/at-cuongle/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="color_while">#FFFFFF</color>
+    <color name="color_gray">#A8A8A8</color>
+    <color name="color_green">#30BE76</color>
+    <color name="color_title">#606060</color>
+    <color name="color_black">#030F09</color>
 </resources>
