--- a/app/src/at-daiho/res/values/colors.xml
+++ b/app/src/at-daiho/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="grayD8D8D8">#D8D8D8</color>
+    <color name="green30BE76">#30BE76</color>
 </resources>
