--- a/app/src/at-daiho/res/layout/activity_login.xml
+++ b/app/src/at-daiho/res/layout/activity_login.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+    <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="asiantech.internship.summer.LoginActivity">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/headerImage"
@@ -75,10 +75,10 @@
             android:textSize="@dimen/textSize14"
             android:textStyle="bold"
             android:text="@string/loginActivityEmailAddressPlaceHolder"
-            tools:ignore="LabelFor" />
+            tools:ignore="Autofill,LabelFor" />
 
         <TextView
-            android:id="@+id/tvPaswordHeader"
+            android:id="@+id/tvPasswordHeader"
             android:layout_height="22dp"
             android:layout_width="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/etEmail"
@@ -91,7 +91,7 @@
         <TextView
             android:layout_height="22dp"
             android:layout_width="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/tvPaswordHeader"
+            app:layout_constraintTop_toTopOf="@id/tvPasswordHeader"
             app:layout_constraintRight_toRightOf="@id/etPassword"
             android:text="@string/loginActivityForgotPassword"
             android:textColor="@color/grayD8D8D8"
@@ -101,14 +101,15 @@
             android:id="@+id/etPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tvPaswordHeader"
+            app:layout_constraintTop_toBottomOf="@id/tvPasswordHeader"
             android:layout_marginTop="15dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:inputType="textPassword"
             android:layout_marginLeft="@dimen/loginActivityControlMargin"
             android:layout_marginRight="@dimen/loginActivityControlMargin"
-            android:text="@string/loginActivityEmailAddress"/>
+            android:text="@string/loginActivityEmailAddress"
+            tools:ignore="Autofill,LabelFor" />
 
         <TextView
             android:id="@+id/btLogin"
@@ -156,5 +157,4 @@
             android:textColor="@color/green30BE76"
             android:gravity="center"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 </ScrollView>
