Config AndroidManifest.xml

--- a/app/src/main/res/layout/fragment_registry.xml
+++ b/app/src/main/res/layout/fragment_registry.xml
@@ -147,11 +147,13 @@
         <TextView
             android:id="@+id/txtLogin"
             android:layout_width="@dimen/width_140"
-            android:layout_height="@dimen/margin_top_16"
+            android:layout_height="@dimen/heigth_32"
             android:gravity="center"
             android:text="@string/textview_login_here"
             android:textColor="@color/color_green"
             android:textSize="16sp"
+            android:layout_marginBottom="@dimen/margin_start_40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
