--- a/app/src/at-cuongle/res/layout/fragment_sign_up.xml
+++ b/app/src/at-cuongle/res/layout/fragment_sign_up.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,60 +11,61 @@
 
         <Button
             android:id="@+id/imgBtnCreateAccount"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="@dimen/height_54_dp"
             android:layout_marginTop="@dimen/margin_top_28dp"
             android:background="@drawable/custom_button"
-            android:gravity="left|center_vertical"
-            android:paddingLeft="@dimen/padding_left_20dp"
+            android:gravity="center"
             android:text="@string/textview_login_button"
             android:textAllCaps="false"
             android:textColor="@color/color_while"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/edtPassword" />
 
         <EditText
             android:id="@+id/edtPassword"
-            android:layout_width="@dimen/width_edt_362dp"
+            android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:text="@string/text_password"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/imgLogo"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
 
         <EditText
             android:id="@+id/edtEmail"
-            android:layout_width="@dimen/width_edt_362dp"
+            android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
             android:fontFamily="Nunito-Regular"
             android:importantForAutofill="no"
             android:inputType="textEmailAddress"
             android:text="@string/text_user_email"
             android:textSize="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.016"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
         <EditText
             android:id="@+id/edtFullName"
-            android:layout_width="362dp"
+            android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
             android:fontFamily="Nunito-Regular"
             android:importantForAutofill="no"
             android:inputType="text"
             android:text="@string/text_user_name"
             android:textSize="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline5"
+            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imgBackGround"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_285"
             android:background="@drawable/img_bg"
@@ -76,13 +76,14 @@
             android:id="@+id/imgLogo"
             android:layout_width="@dimen/width_logo_93_dp"
             android:layout_height="@dimen/height_logo_30_dp"
+            android:layout_marginTop="60dp"
             android:background="@drawable/img_logo"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toTopOf="@+id/guideline2" />
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/tvCreateAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_18_dp"
@@ -105,32 +106,32 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView12" />
+            app:layout_constraintTop_toBottomOf="@+id/tvCreateAccount" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/tvPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_28_dp"
             android:text="@string/textview_password"
             android:textColor="@color/color_gray"
             android:textSize="14dp"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/edtEmail" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/tvEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_28_dp"
             android:text="@string/textview_email"
             android:textColor="@color/color_gray"
             android:textSize="14dp"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/edtFullName" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_top_28_dp"
@@ -138,7 +139,7 @@
             android:text="@string/textview_full_name"
             android:textColor="@color/color_gray"
             android:textSize="14dp"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/tvRequestLogin" />
 
         <TextView
@@ -151,8 +152,8 @@
             android:textColor="@color/color_title"
             android:textSize="14dp"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintTop_toBottomOf="@+id/imgBackGround" />
 
         <TextView
 
@@ -164,28 +165,21 @@
             android:text="@string/textview_start_from_scratch"
             android:textColor="@color/color_black"
             android:textSize="24dp"
-            app:layout_constraintStart_toStartOf="@+id/guideline3"
+            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/imgLogo" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_begin="60dp" />
-
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline3"
+            android:id="@+id/guidelineLeft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="25dp" />
+            app:layout_constraintGuide_begin="24dp" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline5"
+            android:id="@+id/guidelineRight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="25dp" />
+            app:layout_constraintGuide_end="24dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
