--- a/app/src/at-hauha/res/layout/fragment_profile.xml
+++ b/app/src/at-hauha/res/layout/fragment_profile.xml
@@ -31,6 +31,7 @@
             app:layout_constraintHorizontal_bias="0.132"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtBack" />
+
         <LinearLayout
             android:id="@+id/txtBack"
             android:orientation="horizontal"
@@ -40,10 +41,12 @@
             android:layout_marginTop="@dimen/height_64"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
             <ImageView
                 android:src="@drawable/ic_chevron_left_black_24dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
+
             <TextView
 
                 android:layout_width="wrap_content"
@@ -51,8 +54,7 @@
 
                 android:gravity="center"
                 android:src="@drawable/logo"
-                android:text="Back to Profile"
-                 />
+                android:text="Back to Profile" />
         </LinearLayout>
 
 
