--- a/app/src/at-daiho/res/layout/activity_login.xml
+++ b/app/src/at-daiho/res/layout/activity_login.xml
@@ -122,7 +122,7 @@
             android:layout_marginLeft="@dimen/loginActivityControlMargin"
             android:layout_marginRight="@dimen/loginActivityControlMargin"
             app:layout_constraintCircleRadius="10dp"
-            android:background="@color/green30BE76"
+            android:background="@drawable/round_button"
             android:text="@string/loginActivityLoginButtonTitle"
             android:textSize="@dimen/textSize16"
             android:textColor="@color/white"
@@ -131,30 +131,30 @@
 
         <TextView
             android:id="@+id/tvNewScratch"
-            android:layout_height="22dp"
             android:layout_width="174dp"
-            app:layout_constraintTop_toBottomOf="@id/btLogin"
+            android:layout_height="22dp"
             android:layout_marginTop="30dp"
+            android:gravity="center"
+            android:text="@string/loginActivityNewToScratch"
+            android:textColor="@color/grayD8D8D8"
+            android:textSize="@dimen/textSize14"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:text="@string/loginActivityNewToScratch"
-            android:textSize="@dimen/textSize14"
-            android:textColor="@color/grayD8D8D8"
-            android:gravity="center"/>
+            app:layout_constraintTop_toBottomOf="@id/btLogin" />
 
         <TextView
-            android:layout_height="18dp"
             android:layout_width="174dp"
-            app:layout_constraintTop_toBottomOf="@id/tvNewScratch"
+            android:layout_height="18dp"
             android:layout_marginTop="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="10dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="center"
             android:text="@string/loginActivityCreateAccountButtonTitle"
+            android:textColor="@color/green30BE76"
             android:textSize="@dimen/textSize14"
             android:textStyle="bold"
-            android:textColor="@color/green30BE76"
-            android:gravity="center"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvNewScratch" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
