--- a/app/src/at-cuongle/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-cuongle/res/layout/fragment_edit_profile.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
 
 
@@ -34,12 +35,13 @@
             android:text="@string/text_user_phone"
             android:textSize="16dp"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvPhone" />
+            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
+            tools:ignore="Autofill,LabelFor" />
 
         <EditText
+            android:hint="@string/hint_enter_your_email"
             android:id="@+id/edtEmail"
             android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
@@ -54,6 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
 
         <EditText
+            android:hint="@string/hint_enter_your_bio"
             android:id="@+id/edtBio"
             android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
@@ -69,6 +72,8 @@
             app:layout_constraintTop_toBottomOf="@+id/tvBio" />
 
         <EditText
+            android:hint="@string/text_user_name"
+            android:inputType="text"
             android:id="@+id/edtFullName"
             android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
@@ -78,7 +83,8 @@
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
+            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            tools:ignore="Autofill,LabelFor" />
 
         <ImageView
             android:id="@+id/imgAvatar"
