--- a/app/src/at-cuongle/res/layout/fragment_sign_up.xml
+++ b/app/src/at-cuongle/res/layout/fragment_sign_up.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,42 +27,43 @@
             android:id="@+id/edtPassword"
             android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
-            android:importantForAutofill="no"
+            android:hint="@string/hint_enter_your_password"
             android:inputType="textPassword"
             android:text="@string/text_password"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/tvPassword"
+            tools:ignore="Autofill,LabelFor" />
 
         <EditText
             android:id="@+id/edtEmail"
             android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
             android:fontFamily="Nunito-Regular"
-            android:importantForAutofill="no"
+            android:hint="@string/hint_enter_your_email"
             android:inputType="textEmailAddress"
             android:text="@string/text_user_email"
             android:textSize="16dp"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />
+            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
+            tools:ignore="Autofill,LabelFor" />
 
         <EditText
             android:id="@+id/edtFullName"
             android:layout_width="0dp"
             android:layout_height="@dimen/height_edt_height_44dp"
             android:fontFamily="Nunito-Regular"
-            android:importantForAutofill="no"
+            android:hint="@string/hint_enter_your_name"
             android:inputType="text"
             android:text="@string/text_user_name"
             android:textSize="16dp"
             app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
+            app:layout_constraintTop_toBottomOf="@+id/tvName"
+            tools:ignore="Autofill,LabelFor" />
 
         <ImageView
             android:id="@+id/imgBackGround"
